--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
-include ':runtime'
 include ':complier'
 include ':annotation'
 include ':app'
-rootProject.name = "Annotation"
+rootProject.name = "UiState"
+include ':collection'
