--- a/annotation/build.gradle
+++ b/annotation/build.gradle
@@ -1,13 +1,28 @@
 plugins {
     id 'java-library'
     id 'kotlin'
+    id 'maven'
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+}
+
+uploadArchives {
+    configuration = configurations.archives
+    repositories.mavenDeployer {
+        repository(url: uri('../local-maven'))
+        pom.project {
+            name 'annotation'
+            description 'annotation'
+            groupId "com.zhy"
+            artifactId 'annotation'
+            version '0.0.1'
+        }
+    }
 }
