--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,25 @@
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
+    android:requestLegacyExternalStorage="true"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/Theme.Annotation"
-    android:requestLegacyExternalStorage="true">
-    <activity
-      android:name=".TestLauncherActivity"
-      android:exported="false" />
+    android:theme="@style/Theme.Annotation">
+
     <activity android:name="com.zhy.demo.TestActivity">
+
+    </activity>
+
+    <activity
+      android:name=".launcher.UiTestLauncherActivity"
+      android:exported="true" >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
-
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
+<!--      <intent-filter>-->
+<!--        <category android:name="android.intent.category.DEFAULT" />-->
+<!--      </intent-filter>-->
     </activity>
   </application>
 
