--- a/complier/build.gradle
+++ b/complier/build.gradle
@@ -13,8 +13,8 @@ java {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'com.zhy:annotation:0.0.2'
-//    implementation project(path: ':annotation')
+//    implementation 'com.zhy:annotation:0.0.2'
+    implementation project(path: ':annotation')
     implementation 'com.squareup:javapoet:1.13.0'
     implementation 'com.squareup:kotlinpoet:1.7.2'
 }
