--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,13 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        kapt {
+            arguments {
+                arg("uiStateTestGenerateFilePath", "${project.projectDir}/src/main/java/")
+                arg("uiStateTestGenerateFilePackageName", "com.zhy.demo.mock")
+            }
+        }
     }
 
     buildTypes {
