--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,19 +21,19 @@
     android:theme="@style/Theme.Annotation">
 
     <activity android:name="com.zhy.demo.TestActivity">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
+<!--      <intent-filter>-->
+<!--        <action android:name="android.intent.action.MAIN" />-->
+<!--        <category android:name="android.intent.category.LAUNCHER" />-->
+<!--      </intent-filter>-->
     </activity>
 
     <activity
       android:name=".launcher.UiStateTestLauncherActivity"
       android:exported="true" >
-
-<!--      <intent-filter>-->
-<!--        <category android:name="android.intent.category.DEFAULT" />-->
-<!--      </intent-filter>-->
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
     </activity>
 
     <!--注册截屏需要用到的前台服务-->
