[功能]修改发布信息

--- a/annotation/build.gradle
+++ b/annotation/build.gradle
@@ -18,10 +18,10 @@ uploadArchives {
     repositories.mavenDeployer {
         repository(url: uri('../local-maven'))
         pom.project {
-            name 'annotation'
-            description 'annotation'
+            name 'uiStateTestAnnotation'
+            description 'uiStateTestAnnotation'
             groupId "com.zhy"
-            artifactId 'annotation'
+            artifactId 'uiStateTestAnnotation'
             version '0.0.1'
         }
     }
