--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
         kapt {
             arguments {
                 arg("uiStateTestGenerateFilePath", "${project.projectDir}/src/main/java/")
-                arg("uiStateTestGenerateFilePackageName", "com.zhy")
+                arg("uiStateTestGenerateFilePackageName", "com.zhy.uistate.${project.getName()}")
             }
         }
     }
