--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
 
+    implementation "com.google.code.gson:gson:2.8.5"
+
     implementation project(path: ':annotation')
     kapt project(path: ':complier')
     testImplementation 'junit:junit:4.13.1'
