[功能] 新增注解处理器空实现

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
-include ':complier'
-include ':annotation'
+rootProject.name = "UiStateTest"
 include ':app'
-rootProject.name = "UiTest"
+include ':annotation'
+include ':complier'
+include ':complier_empty'
 include ':collection'
